>Now works with JavaScript modules, so it is necessary run on a server. >Now supports adding custom color palettes. >Now the Mandelbrot Set calculation is separated from the plotting implementation.

--- a/html/Home.html
+++ b/html/Home.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <canvas id="canvas" width="2000" height="2000"></canvas>
-        <script src="../js/MandelbrotFractal.js"></script>
+        <canvas id="canvas"></canvas>
+        <canvas id="canvaspalette" width="800" height="20">
+        <script type="module" src="../js/MandelbrotFractal.mjs"></script>
     </body>
 </html>
